[package]
name = "genius-invokation"
description = "Abstractions and structures for Genius Invokation TCG"
authors = ["Kia Strawberries"]
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2021"
readme = "README.md"
keywords = ["genshin", "impact", "tcg"]
repository = "https://github.com/uwukia/genius-invokation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[features]
deck-url = []

[dev-dependencies]
rand = "0.8.5"